Fix z-index issues

--- a/origintheme/public/css/custom.css
+++ b/origintheme/public/css/custom.css
@@ -13,7 +13,7 @@
 /** Origin Theme App - Inset **/
 
 .modal {
-    z-index: 1040;
+    /*z-index: 1040;*/
 }
 
 html {
